--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
     "parser": "babel-eslint",
     "rules": {
       "strict": 0,
+      "react/prop-types": 0,
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn"
     },
