--- a/.eslintrc
+++ b/.eslintrc
@@ -12,5 +12,10 @@
     "extends": [
       "eslint:recommended",
       "plugin:react/recommended"
-    ]
+    ],
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    }
 }
