--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
     "parser": "babel-eslint",
+    "globals": {
+      "localStorage": "readonly"
+    },
     "rules": {
       "strict": 0,
       "react/prop-types": 0,
