--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Andras Nyarai <andrasnyarai@gmail.com>",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
     "format": "prettier --write src/**/*.{js,jsx}"
@@ -25,7 +25,10 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
-    "styled-components": "^4.1.3"
+    "react-spring": "^8.0.19",
+    "react-with-gesture": "^4.0.8",
+    "styled-components": "^4.1.3",
+    "styled-system": "^4.0.8"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
