--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-helmet": "^5.2.0",
     "react-spring": "^8.0.19",
     "react-with-gesture": "^4.0.8",
-    "styled-components": "^4.1.3",
-    "styled-system": "^4.0.8"
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
