--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-helmet": "^5.2.0",
     "react-spring": "^8.0.19",
     "react-with-gesture": "^4.0.8",
+    "simple-icons": "^2.1.0",
     "styled-components": "^4.1.3",
     "use-resize-observer": "^3.1.0"
   },
