create new lock file with nvmrc

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expersonal",
-  "description": "some experiments with js",
+  "description": "visual experiments",
   "version": "1.0.0",
   "author": "Andras Nyarai <andrasnyarai@gmail.com>",
   "scripts": {
