--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "printWidth": 120
 }
