--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-spring": "^8.0.19",
-    "react-with-gesture": "^4.0.8",
+    "react-use-gesture": "^7.0.15",
     "simple-icons": "^2.1.0",
     "styled-components": "^4.1.3",
     "use-resize-observer": "^3.1.0"
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^1.5.1",
     "gatsby-plugin-eslint": "^2.0.8",
+    "glsl-shader-loader": "^0.1.6",
     "prettier": "^1.16.4",
     "typescript": "^3.8.3",
     "worker-loader": "^2.0.0"
