--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.0",
     "react-spring": "^8.0.19",
+    "react-three-fiber": "^5.3.19",
     "react-use-gesture": "^7.0.16",
     "simple-icons": "^2.19.0",
     "styled-components": "^4.1.3",
+    "three": "^0.126.1",
     "use-resize-observer": "^3.1.0"
   },
   "devDependencies": {
