--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/**/*.{js,jsx}"
   },
   "dependencies": {
+    "@react-spring/three": "^9.1.0",
+    "@react-three/fiber": "^7.0.2",
     "gatsby": "^2.24.68",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.34",
