--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "simple-icons": "^2.19.0",
     "styled-components": "^4.1.3",
     "three": "^0.126.1",
+    "three.meshline": "^1.3.0",
     "use-resize-observer": "^3.1.0"
   },
   "devDependencies": {
