--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expersonal",
+  "name": "experson.ai",
   "description": "visual experiments",
   "version": "1.0.0",
   "author": "Andras Nyarai <andrasnyarai@gmail.com>",
